--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive E-Invite</title>
+    <title>E-Invite</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="invite">
-        <div class="half left" id="left-half"> <!-- Left half of the invite -->
-            <h1>Left Half</h1>
+    <div class="invite-wrapper">
+        <div class="half left-half" id="leftHalf">
+            <button class="toggle-button" id="leftButton">Open Left</button>
         </div>
-        <div class="half right" id="right-half"> <!-- Right half of the invite -->
-            <h1>Right Half</h1>
+        <div class="half right-half" id="rightHalf">
+            <button class="toggle-button" id="rightButton">Open Right</button>
         </div>
-        <div class="inner-content" id="inner-content">
-            <h2>Welcome to the Event</h2>
-            <p>Event details go here...</p>
+        <div class="content" id="inviteContent">
+            <h1>Welcome to the Invite!</h1>
+            <p>This is the content revealed when both halves are open.</p>
         </div>
     </div>
     <script src="script.js"></script>
